<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyApplicationActivity" >

    <TextView
        android:text="@string/txt_instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_instructions" />

    <Button
        android:text="@string/label_paused"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_paused"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/button_playing"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button_playing" />

    <Button
        android:text="@string/label_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_playing"
        android:layout_below="@+id/text_instructions"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:text="@string/currently_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_selected_paused"
        android:textAlignment="viewEnd"
        android:layout_alignTop="@+id/button_paused"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:text="@string/currently_selected"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_selected_playing"
        android:textAlignment="viewEnd"
        android:layout_alignTop="@+id/button_playing"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_warning_red_24dp"
        android:layout_marginStart="22dp"
        android:id="@+id/img_warning"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:text="@string/notification_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/img_warning"
        android:layout_toEndOf="@+id/img_warning"
        android:layout_marginStart="18dp"
        android:id="@+id/text_settings_label"
        android:visibility="invisible" />

    <Button
        android:text="@string/enable_notification_access"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_enable_notification_access"
        android:layout_below="@+id/text_settings_label"
        android:layout_alignStart="@+id/img_warning"
        android:layout_marginTop="14dp"
        android:visibility="invisible" />

</RelativeLayout>